// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render closed popover 1`] = `
<DocumentFragment>
  .c0 {
  display: none;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem 0;
  top: calc(100% + 10px);
  position: absolute;
  width: 100px;
  border-radius: 5px;
  z-index: 1;
}

.c0:before {
  position: absolute;
  content: "";
  width: 20px;
  height: 20px;
  top: -5px;
  left: 50%;
  border-radius: 5px;
  -webkit-transform: translate3d(-50%,0,0) rotate(45deg);
  -ms-transform: translate3d(-50%,0,0) rotate(45deg);
  transform: translate3d(-50%,0,0) rotate(45deg);
  z-index: -1;
}

<div
    class="c0"
  >
      
  </div>
</DocumentFragment>
`;

exports[`Render open popover 1`] = `
<DocumentFragment>
  .c0 {
  display: none;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem 0;
  top: calc(100% + 10px);
  position: absolute;
  width: 100px;
  border-radius: 5px;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-animation: eMLfYp 0.25s ease;
  animation: eMLfYp 0.25s ease;
}

.c0:before {
  position: absolute;
  content: "";
  width: 20px;
  height: 20px;
  top: -5px;
  left: 50%;
  border-radius: 5px;
  -webkit-transform: translate3d(-50%,0,0) rotate(45deg);
  -ms-transform: translate3d(-50%,0,0) rotate(45deg);
  transform: translate3d(-50%,0,0) rotate(45deg);
  z-index: -1;
}

<div
    class="c0"
    open=""
  >
      
  </div>
</DocumentFragment>
`;
